Updated: phpdoc to ezp-next/commit/676124b988c95ff1a59f6e8c6b200bb98fef8079

--- a/phpDocumentor/Publish.Core.Base.ServiceContainer.html
+++ b/phpDocumentor/Publish.Core.Base.ServiceContainer.html
@@ -117,7 +117,7 @@ If the argument value starts with %, then it is a lazy loaded service provided a
       <a style="font-style: italic;" href="#ServiceContainer::getServiceArgument()">getServiceArgument</a>,
       <a style="font-style: italic;" href="#ServiceContainer::getVariable()">getVariable</a>,
       <a style="font-style: italic;" href="#ServiceContainer::lookupArguments()">lookupArguments</a>,
-      <a style="font-style: italic;" href="#ServiceContainer::recursivlyLookupArguments()">recursivlyLookupArguments</a>,
+      <a style="font-style: italic;" href="#ServiceContainer::recursivelyLookupArguments()">recursivelyLookupArguments</a>,
       <div class="method">
 <a id="ServiceContainer::__construct()"></a><h3>__construct<span class="nb-faded-text">(
           array
@@ -362,7 +362,7 @@ If the argument value starts with %, then it is a lazy loaded service provided a
 </tr>
 <tr>
 <td>uses</td>
-<td>\eZ\Publish\Core\Base\recursivlyLookupArguments()</td>
+<td>\eZ\Publish\Core\Base\recursivelyLookupArguments()</td>
 </tr>
 <tr>
 <td>throws</td>
@@ -428,7 +428,7 @@ If the argument value starts with %, then it is a lazy loaded service provided a
             $arguments,
           boolean
              
-            $recursivly
+            $recursively
             = false,
           
           )
@@ -456,7 +456,7 @@ If the argument value starts with %, then it is a lazy loaded service provided a
 <td></td>
 </tr>
 <tr>
-<td>$recursivly</td>
+<td>$recursively</td>
 <td style="white-space: normal;">boolean</td>
 <td></td>
 <td>false</td>
@@ -487,7 +487,7 @@ If the argument value starts with %, then it is a lazy loaded service provided a
 </tr>
 <tr>
 <td>uses</td>
-<td>\eZ\Publish\Core\Base\recursivlyLookupArguments()</td>
+<td>\eZ\Publish\Core\Base\recursivelyLookupArguments()</td>
 </tr>
 <tr>
 <td>throws</td>
@@ -497,7 +497,7 @@ If the argument value starts with %, then it is a lazy loaded service provided a
 </table>
 </div>
 <div class="method">
-<a id="ServiceContainer::recursivlyLookupArguments()"></a><h3>recursivlyLookupArguments<span class="nb-faded-text">(
+<a id="ServiceContainer::recursivelyLookupArguments()"></a><h3>recursivelyLookupArguments<span class="nb-faded-text">(
           array
              
             $arguments,
@@ -550,7 +550,7 @@ If the argument value starts with %, then it is a lazy loaded service provided a
 </tr>
 <tr>
 <td>uses</td>
-<td>\eZ\Publish\Core\Base\recursivlyLookupArguments()</td>
+<td>\eZ\Publish\Core\Base\recursivelyLookupArguments()</td>
 </tr>
 <tr>
 <td>throws</td>
