Updated: phpdoc to ezp-next/commit/47c08bfe5f9ae2ab004bd46431d1695002342ce9

--- a/phpDocumentor/Publish.API.Repository.Values.Content.Query.Criterion.ContentTypeId.html
+++ b/phpDocumentor/Publish.API.Repository.Values.Content.Query.Criterion.ContentTypeId.html
@@ -109,7 +109,7 @@
 <tbody><tr>
 <td>$value</td>
 <td style="white-space: normal;">int|int[]</td>
-<td><p>One or more content Id that must be matched</p></td>
+<td><p>One or more content type Id that must be matched</p></td>
 <td></td>
 </tr></tbody>
 </table>
