Updated: phpdoc to ezp-next/commit/ef1096a708adc6563553b640c9e25a7ae882d961

--- a/phpDocumentor/Publish.Core.Persistence.Legacy.Content.Search.Gateway.CriterionHandler.FullText.html
+++ b/phpDocumentor/Publish.Core.Persistence.Legacy.Content.Search.Gateway.CriterionHandler.FullText.html
@@ -301,7 +301,7 @@ queries, or everything is just compared using equal.</p></small><br><h4>Argument
         <span class="nb-faded-text">\ezcQueryExpression</span>
 </h3>
 <h4>Description</h4>
-<em>Check if this criterion handler accepts to handle the given criterion.</em><br><h4>Arguments</h4>
+<em>Generate query expression for a Criterion this handler accepts</em><br><small><p>accept() must be called before calling this method.</p></small><br><h4>Arguments</h4>
 <table>
 <thead><tr>
 <th>Name</th>
