--- a/phpDocumentor/parse_markers.html
+++ b/phpDocumentor/parse_markers.html
@@ -5337,7 +5337,7 @@
 <td>No short description for property $legacyKernel</td>
 </tr>
 </table></div>
-<h3><a href="#">Publish/Core/Repository/ContentService.php<small>5</small></a></h3>
+<h3><a href="#">Publish/Core/Repository/ContentService.php<small>8</small></a></h3>
 <div><table>
 <tr>
 <th>Type</th>
@@ -5361,12 +5361,27 @@
 </tr>
 <tr>
 <td>error</td>
-<td>1857</td>
-<td>No short description for method getDomainVersionStatus()</td>
+<td>1759</td>
+<td>Argument $type is missing from the Docblock of buildDomainFields()</td>
+</tr>
+<tr>
+<td>error</td>
+<td>1806</td>
+<td>Argument $type is missing from the Docblock of buildContentInfoDomainObject()</td>
+</tr>
+<tr>
+<td>error</td>
+<td>1847</td>
+<td>Argument $type is missing from the Docblock of buildVersionInfoDomainObject()</td>
 </tr>
 <tr>
 <td>error</td>
 <td>1880</td>
+<td>No short description for method getDomainVersionStatus()</td>
+</tr>
+<tr>
+<td>error</td>
+<td>1903</td>
 <td>No short description for method getDateTime()</td>
 </tr>
 </table></div>
