--- a/phpDocumentor/Publish.Core.Persistence.Legacy.Content.Search.Gateway.CriterionHandler.Field.html
+++ b/phpDocumentor/Publish.Core.Persistence.Legacy.Content.Search.Gateway.CriterionHandler.Field.html
@@ -238,7 +238,7 @@ identifier and the sort column, which should be used.</p></small><br><h4>Argumen
         <span class="nb-faded-text">\ezcQueryExpression</span>
 </h3>
 <h4>Description</h4>
-<em>Check if this criterion handler accepts to handle the given criterion.</em><br><h4>Arguments</h4>
+<em>Generate query expression for a Criterion this handler accepts</em><br><small><p>accept() must be called before calling this method.</p></small><br><h4>Arguments</h4>
 <table>
 <thead><tr>
 <th>Name</th>
